# pkcs11-learning

./: .gitignore  README.md  abstract_pkcs11_commands.py  alphabet.py  automaton_to_smv.py  cipher_adequacy.py  cleanup.sh  configuration.py  configuration.toml  conversion_to_pykcs11.py  conversion_to_python_pkcs11.py  convert_to_svg.sh  dks_2.py  dks_6.py  fls_2.py  graph_rewriting.py  known_attacks.py  learn_clulow.py  learn_known_attacks.py  lts.py  main.py  mealy_difference.py  models.py  my_types.py  notes.md  opencryptoki.env  patched.aut  patched.dot  pkcs11_sul.py  pkcs11_sul_alphabet.py  pkcs11_sul_inputs.py  prova.py  pykcs11_commands.py  pykcs11_knowledge_set.py  pykcs11_sul.py  pykcs11_utils.py  pyproject.toml  python_pkcs11_commands.py  python_pkcs11_knowledge_set.py  python_pkcs11_known_attacks.py  (+8 more)
article/2026-csf/: biblio.bib  cmds.tex  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex
examples/wrap_and_decrypt/: expected_wrap_and_decrypt.dot  wrap_and_decrypt.dot  wrap_and_decrypt_alphabet_model_0.toml  wrap_and_decrypt_alphabet_model_1.toml  (+4 more)
grammar/: expansion.py  graph.py  invariants.py  my_types.py  pruning.py  test_graph.py  test_pruning.py  visualization.py
issues/: python_pkcs11_aes_gcm.py
latex/: main.tex
model_checking/: enumeration.py  graph_sat.py  visualization.py
test/: test_rsa_reconstruction_from_keypair.py  test_rsa_reconstruction_from_keypair_CKM_RSA_PKCS_OAEP.py  test_wrap_asym_sym.py  test_wrap_asym_sym_CKM_RSA_OAEP.py  test_wrap_sym_asym.py  test_wrap_sym_asym_CKM_RSA_PKCS_OAEP.py  test_wrap_sym_sym.py
(+51 files in other folders)
